<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="about_bhim">"BHIM - UPI"</string>
    <string name="about_bhim_summary">"Donate via UPI"</string>
    <string name="about_bitcoin_bch">"Bitcoin Cash"</string>
    <string name="about_bitcoin_bch_summary">"Donate via Bitcoin Cash (BCH)"</string>
    <string name="about_bitcoin_btc">"Bitcoin"</string>
    <string name="about_bitcoin_btc_summary">"Donate via Bitcoin (BTC)"</string>
    <string name="about_bitcoin_eth">"Ethereum"</string>
    <string name="about_bitcoin_eth_summary">"Donate via Ethereum (ETH)"</string>
    <string name="about_fdroid">"F-Droid"</string>
    <string name="about_fdroid_summary">"Get the Aurora Store via F-Droid."</string>
    <string name="about_gitlab">"GitLab"</string>
    <string name="about_gitlab_summary">"Get the Aurora Store source code from Aurora OSS on GitLab."</string>
    <string name="about_libera">"Liberapay"</string>
    <string name="about_libera_summary">"Become a patron on Liberapay"</string>
    <string name="about_paypal">PayPal</string>
    <string name="about_paypal_summary">"Donate via PayPal"</string>
    <string name="about_telegram">"Telegram"</string>
    <string name="about_telegram_summary">"Join the Aurora Support group for discussions or suggestions."</string>
    <string name="about_xda">"Dev Thread"</string>
    <string name="about_xda_summary">"See the Aurora Store XDA thread for discussions or suggestions."</string>
    <string name="account_anonymous">"Anonymous"</string>
    <string name="account_anonymous_insecure">"Anonymous (insecure)"</string>
    <string name="account_google">"Google"</string>
    <string name="account_logged_out">"You are logged out"</string>
    <string name="account_login_using">Log in using</string>
    <string name="account_logout">Log out from Aurora</string>
    <string name="action_accept">"Accept"</string>
    <string name="action_back">"Back"</string>
    <string name="action_blacklist">"Blacklist"</string>
    <string name="action_blacklist_add">"Add to Blacklist"</string>
    <string name="action_cancel">"Cancel"</string>
    <string name="action_check">"Check"</string>
    <string name="action_clear">"Clear"</string>
    <string name="action_close">"Close"</string>
    <string name="action_copy">"Copy"</string>
    <string name="action_copy_link">"Copy Link"</string>
    <string name="action_deny">"Deny"</string>
    <string name="action_disable">"Disable"</string>
    <string name="action_export">"Export"</string>
    <string name="action_import">"Import"</string>
    <string name="action_filter">"Filters"</string>
    <string name="action_filter_all">"All"</string>
    <string name="action_filter_apply">"Apply"</string>
    <string name="action_filter_apps_with_ads">"Apps with ads"</string>
    <string name="action_filter_downloads">"Downloads"</string>
    <string name="action_filter_gsf_dependent_apps">"GSF dependent"</string>
    <string name="action_filter_misc">"Misc"</string>
    <string name="action_filter_paid_apps">"Paid"</string>
    <string name="action_filter_rating">"Ratings"</string>
    <string name="action_finish">"Finish"</string>
    <string name="action_get_local_apk">"Save App bundle"</string>
    <string name="action_grant">"Grant"</string>
    <string name="action_granted">"Granted"</string>
    <string name="action_ignore">"Ignore"</string>
    <string name="action_ignore_version">Ignore version</string>
    <string name="action_install">"Install"</string>
    <string name="action_installations">"Installations"</string>
    <string name="action_installing">"Installing"</string>
    <string name="action_join">"Join"</string>
    <string name="action_later">"Later"</string>
    <string name="action_leave">"Leave"</string>
    <string name="action_logout">Log out</string>
    <string name="action_next">"Next"</string>
    <string name="action_ok">"Okay"</string>
    <string name="action_open">"Open"</string>
    <string name="action_pause">"Pause"</string>
    <string name="action_pending">"Pending"</string>
    <string name="action_post">"Post"</string>
    <string name="action_restart">"Restart"</string>
    <string name="action_resume">"Resume"</string>
    <string name="action_search">"Search"</string>
    <string name="action_share">"Share"</string>
    <string name="action_uninstall">"Uninstall"</string>
    <string name="action_info">"App Info"</string>
    <string name="action_update">"Update"</string>
    <string name="action_update_all">"Update all"</string>
    <string name="action_whitelist">"Whitelist"</string>
    <string name="action_wishlist_add">"Add to wishlist"</string>
    <string name="details_beta">"Beta program"</string>
    <string name="details_beta_subscribed">"You're a beta tester"</string>
    <string name="details_beta_available">"Join beta program ?"</string>
    <string name="details_beta_description">"You will see new features and bugs before the public does. Give your feedback to developers to help them improve."</string>
    <string name="details_beta_delay">"Enrollment may take some time, you can check status later."</string>
    <string name="details_changelog">"Changelog"</string>
    <string name="details_changelog_unavailable">"Changelog not provided"</string>
    <string name="details_contains_ads">"Contains Ads"</string>
    <string name="details_dependencies">"Dependencies"</string>
    <string name="details_description">"Description"</string>
    <string name="details_dev_address">"Address"</string>
    <string name="details_dev_details">"Developer contact"</string>
    <string name="details_dev_email">"Email"</string>
    <string name="details_dev_profile">"Developer profile"</string>
    <string name="details_dev_website">"Website"</string>
    <string name="details_free">"Free"</string>
    <string name="details_gsf_dependent">"Requires GSF"</string>
    <string name="details_more_about_app">"More about app"</string>
    <string name="details_no_ads">"No ads"</string>
    <string name="details_no_app_match">"No app match found"</string>
    <string name="details_no_dependencies">"No Dependencies"</string>
    <string name="details_no_permission">"No permissions"</string>
    <string name="details_no_updates">"No updates available"</string>
    <string name="details_paid">"Paid"</string>
    <string name="details_permission">"Permission"</string>
    <string name="details_privacy">"Privacy"</string>
    <string name="details_ratings">"Rating and reviews"</string>
    <string name="details_think_this_app">"What do you think about this app?"</string>
    <string name="download_cancel_all">"Cancel all"</string>
    <string name="download_canceled">"Cancelled"</string>
    <string name="download_clear_completed">"Clear completed"</string>
    <string name="download_completed">Download completed</string>
    <string name="download_eta_calculating">"Calculating"</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_failed">"Download failed"</string>
    <string name="download_force_clear_all">"Force clear all"</string>
    <string name="download_metadata">"Getting metadata"</string>
    <string name="download_none">"No downloads"</string>
    <string name="download_pause_all">"Pause all"</string>
    <string name="download_paused">"Paused • <xliff:g id="completed_downloads">%1$d</xliff:g> / <xliff:g id="all_downloads">%2$d</xliff:g>"</string>
    <string name="download_queued">"Queued"</string>
    <string name="exodus_powered">"Powered by Exodus"</string>
    <string name="exodus_progress">"Checking for trackers…"</string>
    <string name="filter_review_all">"All"</string>
    <string name="filter_review_critical">"Critical"</string>
    <string name="filter_review_five">"Five"</string>
    <string name="filter_review_four">"Four"</string>
    <string name="filter_review_one">"One"</string>
    <string name="filter_review_positive">"Positive"</string>
    <string name="filter_review_three">"Three"</string>
    <string name="filter_review_two">"Two"</string>
    <string name="pref_abandon_session">"Force clear installation sessions"</string>
    <string name="pref_abandon_session_desc">"Clear abandon or pending installation sessions"</string>
    <string name="pref_app_download">"Downloads"</string>
    <string name="pref_common_extra">"Extras"</string>
    <string name="pref_downloader_active_summary">"Maximum number of active downloads"</string>
    <string name="pref_downloader_active_title">"Active download"</string>
    <string name="pref_downloader_external">"User external storage"</string>
    <string name="pref_downloader_external_desc">External storage is used for downloads, exports, etc.</string>
    <string name="pref_filter_fdroid_summary">"Removes F-Droid apps from app lists"</string>
    <string name="pref_filter_fdroid_title">"Filter F-Droid apps"</string>
    <string name="pref_filter_google_summary">"Removes all Google Apps from search results and category apps"</string>
    <string name="pref_filter_google_title">"Filter Google apps"</string>
    <string name="pref_filter_search_summary">"Search filters are reset on each search. Turn off to save search filters"</string>
    <string name="pref_filter_search_title">"Use non-persistent search filter"</string>
    <string name="pref_install_auto_summary">"Apps are installed instantly after download completes"</string>
    <string name="pref_install_auto_title">"Auto install APKs after download"</string>
    <string name="pref_install_delete_summary">"APKs will be deleted by default"</string>
    <string name="pref_install_delete_title">"Delete APK post-install"</string>
    <string name="pref_install_mode_summary">"Select mode of APK installation"</string>
    <string name="pref_install_mode_title">"Installation method"</string>
    <string name="pref_install_profile_summary">"Select the target profile to install apps to. Only works with the root installation method"</string>
    <string name="pref_install_profile_title">"Installation profiles (Experimental)"</string>
    <string name="pref_network_title">"Networking"</string>
    <string name="pref_ui_accent_title">"Accent"</string>
    <string name="pref_ui_theme_title">"Theme"</string>
    <string name="pref_ui_title">"Customization"</string>
    <string name="pref_ui_no_for_you">"For You Pages"</string>
    <string name="pref_ui_no_for_you_desc">"Display For You Pages on home screen"</string>
    <string name="pref_ui_similar_apps">"Similar and related apps"</string>
    <string name="pref_ui_similar_apps_desc">"Display similar and related clusters on app details page"</string>
    <string name="tab_top_free">"Top free"</string>
    <string name="tab_top_grossing">"Top grossing"</string>
    <string name="tab_top_paid">"Top paid"</string>
    <string name="tab_trending">"Trending"</string>
    <string name="title_about">About</string>
    <string name="title_account_manager">"Accounts"</string>
    <string name="title_apps_games">"My apps &amp; games"</string>
    <string name="title_apps_sale">"Apps on sale"</string>
    <string name="title_blacklist_manager">"Blacklist manager"</string>
    <string name="title_download_manager">"Downloads"</string>
    <string name="title_installation">"Installation"</string>
    <string name="title_settings">"Settings"</string>
    <string name="title_spoof_manager">"Spoof manager"</string>
    <string name="title_updates">"Updates"</string>
    <string name="title_advanced">"Advanced"</string>
    <string name="app_language">App Language</string>
    <string name="pref_ui_layout">Layout</string>
    <string name="pref_ui_layout_tab">Select default tab</string>
</resources>