<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:key="PREFERENCE_AUTO_INSTALL"
        app:summary="@string/pref_install_auto_summary"
        app:title="@string/pref_install_auto_title" />

    <com.aurora.store.view.custom.preference.AuroraListPreference
        app:defaultValue="0"
        app:entries="@array/pref_installation_method"
        app:entryValues="@array/pref_installation_method_values"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_INSTALLER_ID"
        app:summary="@string/pref_install_mode_summary"
        app:title="@string/pref_install_mode_title" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="INSTALLATION_ABANDON_SESSION"
        app:summary="@string/pref_abandon_session_desc"
        app:title="@string/pref_abandon_session" />

    <ListPreference
        app:defaultValue="0"
        app:iconSpaceReserved="false"
        app:isPreferenceVisible="false"
        app:key="INSTALLATION_PROFILE"
        app:summary="@string/pref_install_profile_summary"
        app:title="@string/pref_install_profile_title" />
</androidx.preference.PreferenceScreen>
