<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_FILTER_GOOGLE"
        app:summary="@string/pref_filter_google_summary"
        app:title="@string/pref_filter_google_title" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_FILTER_FDROID"
        app:summary="@string/pref_filter_fdroid_summary"
        app:title="@string/pref_filter_fdroid_title" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_FILTER_SEARCH"
        app:summary="@string/pref_filter_search_summary"
        app:title="@string/pref_filter_search_title" />
</PreferenceScreen>