<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.aurora.store.view.custom.preference.AuroraListPreference
        app:defaultValue="0"
        app:entries="@array/pref_themes"
        app:entryValues="@array/pref_themes_values"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_THEME_TYPE"
        app:title="@string/pref_ui_theme_title"
        app:useSimpleSummaryProvider="true" />

    <com.aurora.store.view.custom.preference.AuroraListPreference
        app:defaultValue="1"
        app:entries="@array/pref_accent"
        app:entryValues="@array/pref_accent_values"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_THEME_ACCENT"
        app:title="@string/pref_ui_accent_title"
        app:useSimpleSummaryProvider="true" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_APP_LANGUAGE"
        app:title="@string/app_language" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/pref_ui_layout" />

    <com.aurora.store.view.custom.preference.AuroraListPreference
        app:defaultValue="0"
        app:entries="@array/pref_default_tab"
        app:entryValues="@array/pref_default_tab_values"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_DEFAULT_SELECTED_TAB"
        app:title="@string/pref_ui_layout_tab"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:title="@string/pref_common_extra" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_FOR_YOU"
        app:summary="@string/pref_ui_no_for_you_desc"
        app:title="@string/pref_ui_no_for_you" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_SIMILAR"
        app:summary="@string/pref_ui_similar_apps_desc"
        app:title="@string/pref_ui_similar_apps" />
</androidx.preference.PreferenceScreen>
