<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_DOWNLOAD_EXTERNAL"
        app:summary="@string/pref_downloader_external_desc"
        app:title="@string/pref_downloader_external" />

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        app:key="PREFERENCE_AUTO_DELETE"
        app:summary="@string/pref_install_delete_summary"
        app:title="@string/pref_install_delete_title" />

    <SeekBarPreference
        android:defaultValue="3"
        android:key="PREFERENCE_DOWNLOAD_ACTIVE"
        android:max="12"
        android:summary="@string/pref_downloader_active_summary"
        android:title="@string/pref_downloader_active_title"
        app:adjustable="true"
        app:iconSpaceReserved="false"
        app:min="1"
        app:showSeekBarValue="true" />
</androidx.preference.PreferenceScreen>
