<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:icon="@drawable/ic_filter"
        app:key="pref_filter"
        app:layout="@layout/item_preference"
        app:title="@string/action_filter" />

    <Preference
        app:icon="@drawable/ic_installation"
        app:iconSpaceReserved="false"
        app:key="pref_install"
        app:layout="@layout/item_preference"
        app:title="@string/title_installation" />

    <Preference
        app:icon="@drawable/ic_ui"
        app:iconSpaceReserved="false"
        app:key="pref_ui"
        app:layout="@layout/item_preference"
        app:title="@string/pref_ui_title" />

    <Preference
        app:icon="@drawable/ic_download_manager"
        app:iconSpaceReserved="false"
        app:key="pref_download"
        app:layout="@layout/item_preference"
        app:title="@string/pref_app_download" />

    <Preference
        app:icon="@drawable/ic_network"
        app:iconSpaceReserved="false"
        app:key="pref_network"
        app:layout="@layout/item_preference"
        app:title="@string/pref_network_title" />

    <Preference
        app:icon="@drawable/ic_updates"
        app:iconSpaceReserved="false"
        app:key="pref_updates"
        app:layout="@layout/item_preference"
        app:title="@string/title_updates" />

    <Preference
        app:icon="@drawable/ic_tune"
        app:iconSpaceReserved="false"
        app:key="pref_advanced"
        app:layout="@layout/item_preference"
        app:title="@string/title_advanced" />
</PreferenceScreen>
