<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ui.details.DetailsReviewFragment">

    <include
        android:id="@+id/layout_toolbar_action_review"
        layout="@layout/view_toolbar_action" />

    <HorizontalScrollView
        android:id="@+id/sort_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            app:checkedChip="@id/filter_review_all"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_review_all"
                style="@style/ViewStyle.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_review_all" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_review_critical"
                style="@style/ViewStyle.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_review_critical" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_review_positive"
                style="@style/ViewStyle.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_review_positive" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_review_five"
                style="@style/ViewStyle.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_review_five" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_review_four"
                style="@style/ViewStyle.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_review_four" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_review_three"
                style="@style/ViewStyle.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_review_three" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_review_two"
                style="@style/ViewStyle.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_review_two" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_review_one"
                style="@style/ViewStyle.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_review_one" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:paddingStart="@dimen/padding_normal"
        android:paddingEnd="0dp"
        android:scrollbars="none"
        app:itemSpacing="@dimen/margin_normal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/view_review" />
</LinearLayout>