<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_small"
    android:showDividers="middle">

    <com.aurora.store.view.custom.layouts.ActionHeaderLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerTitle="@string/details_dev_details" />

    <com.aurora.store.view.custom.layouts.DevInfoLayout
        android:id="@+id/dev_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:imgIcon="@drawable/ic_network"
        app:txtTitle="@string/details_dev_website"
        tools:visibility="visible" />

    <com.aurora.store.view.custom.layouts.DevInfoLayout
        android:id="@+id/dev_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:imgIcon="@drawable/ic_mail"
        app:txtTitle="@string/details_dev_email"
        tools:visibility="visible" />

    <com.aurora.store.view.custom.layouts.DevInfoLayout
        android:id="@+id/dev_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:imgIcon="@drawable/ic_map"
        app:txtTitle="@string/details_dev_address"
        tools:visibility="visible" />
</LinearLayout>