<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/top_tab_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            app:chipSpacingHorizontal="@dimen/margin_small"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/tab_top_free"
                style="@style/Widget.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_top_free" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tab_top_grossing"
                style="@style/Widget.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_top_grossing" />


            <com.google.android.material.chip.Chip
                android:id="@+id/tab_trending"
                style="@style/Widget.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_trending" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tab_top_paid"
                style="@style/Widget.Aurora.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_top_paid" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_layout" />
</RelativeLayout>