<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exodus_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_small"
    android:showDividers="middle">

    <com.aurora.store.view.custom.layouts.ActionHeaderLayout
        android:id="@+id/header_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerTitle="@string/details_privacy" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exodus_powered"
        android:textAppearance="@style/TextAppearance.Aurora.Line3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exodus_progress"
        android:textAppearance="@style/TextAppearance.Aurora.Line1" />

    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/epoxy_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:itemSpacing="@dimen/margin_small"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="4"
        tools:listitem="@layout/view_exodus" />
</LinearLayout>